--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ issue_tracker: https://github.com/jama5262/jiffy/issues
 documentation: https://github.com/jama5262/jiffy/tree/master/doc
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=2.19.6 <4.0.0'
 
 dependencies:
-  intl: ^0.19.0
+  intl: 0.17.0
 
 dev_dependencies:
   lints: ">=2.0.1 <4.0.0"
